@@ -1,7 +1,11 @@
 <?xml version="1.0"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" [
 ]>
-<html xmlns:cong="http://www.conglomerate.org/" cong:name="HTML" cong:description="An HTML Document">
+<html>
+  <cong:template xmlns:cong="http://www.conglomerate.org/">
+    <cong:name>HTML</cong:name>
+    <cong:description>An HTML Document</cong:description>
+  </cong:template>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>
